--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
       <span class="badge badge-skill">JavaScript</span>
       <span class="badge badge-skill">Bootstrap</span>
       <span class="badge badge-skill">Git</span>
+      <span class="badge badge-skill">Docker</span>
     </div>
     <div class="mt-3">
       <strong>Soft Skills:</strong> Collaboration, Problem-Solving, Accountability, Communication, Analytical Skills, Adaptability
